--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
   "keywords": [],
   "license": "MIT",
   "dependencies": {
+    "@picovoice/picovoice-web-en-worker": "^1.1.2",
+    "@picovoice/picovoice-web-react": "^1.0.6",
+    "@picovoice/rhino-web-en-worker": "^1.6.1",
+    "@picovoice/rhino-web-react": "^1.3.0",
+    "@picovoice/web-voice-processor": "^2.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hot-loader": "4.13.0",
