--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "electron-react-typescript",
-  "author": "Diego Fernandes <diego.schell.f@gmail.com>",
-  "version": "2.0.0",
-  "description": "An Electron boilerplate including TypeScript, React, Jest and ESLint.",
+  "name": "taiga",
+  "author": "Iamtheluiz <iamtheluiz.@gmail.com>",
+  "version": "0.1.0",
+  "description": "An Electron shortcute app",
   "main": "./.webpack/main/index.js",
   "scripts": {
     "start": "electron-forge start",
@@ -15,15 +15,11 @@
   "keywords": [],
   "license": "MIT",
   "dependencies": {
-    "@picovoice/picovoice-web-en-worker": "^1.1.2",
-    "@picovoice/picovoice-web-react": "^1.0.6",
-    "@picovoice/rhino-web-en-worker": "^1.6.1",
-    "@picovoice/rhino-web-react": "^1.3.0",
-    "@picovoice/web-voice-processor": "^2.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hot-loader": "4.13.0",
     "react-icons": "^4.3.1",
+    "react-router-dom": "^6.2.1",
     "styled-components": "5.3.0"
   },
   "devDependencies": {
@@ -60,6 +56,7 @@
     "eslint-plugin-promise": "5.1.0",
     "eslint-plugin-react": "7.24.0",
     "eslint-plugin-standard": "5.0.0",
+    "file-loader": "^6.2.0",
     "jest": "27.0.4",
     "npm-run-all": "4.1.5",
     "prettier": "2.3.1",
@@ -70,8 +67,8 @@
   "config": {
     "forge": {
       "packagerConfig": {
-        "name": "Electron starter",
-        "executableName": "electron-starter",
+        "name": "Taiga",
+        "executableName": "taiga",
         "icon": "assets/icon",
         "extraResource": [
           "assets"
@@ -102,7 +99,7 @@
         {
           "name": "@electron-forge/maker-squirrel",
           "config": {
-            "name": "Electron Starter"
+            "name": "Taiga"
           }
         },
         {
