--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-hot-loader": "4.13.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
-    "styled-components": "5.3.0"
+    "styled-components": "5.3.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "7.14.6",
@@ -42,6 +43,7 @@
     "@types/react": "17.0.11",
     "@types/react-dom": "17.0.8",
     "@types/styled-components": "5.1.10",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "4.27.0",
     "@typescript-eslint/parser": "4.27.0",
     "babel-loader": "8.2.2",
