--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "./.webpack/main/index.js",
   "scripts": {
     "start": "electron-forge start",
-    "package": "electron-forge package",
+    "package": "electron-forge package && cd ./TaigaRecognition && dotnet publish -c Release -o ../out/Taiga-win32-x64/resources",
     "make": "electron-forge make",
     "release": "electron-forge publish",
     "lint": "eslint . --ext js,ts",
@@ -15,6 +15,7 @@
   "keywords": [],
   "license": "MIT",
   "dependencies": {
+    "copyfiles": "^2.4.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hot-loader": "4.13.0",
