--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,7 @@
     "@typescript-eslint"
   ],
   "rules": {
-    "react/prop-types": "off"
+    "react/prop-types": "off",
+    "prettier/prettier": ["error"]
   }
 }
