--- a/package.json
+++ b/package.json
@@ -5,12 +5,24 @@
   "description": "An Electron shortcute app",
   "main": "./.webpack/main/index.js",
   "scripts": {
+    "prepare": "husky install",
     "start": "electron-forge start",
     "package": "electron-forge package && cd ./TaigaRecognition && dotnet publish -c Release -o ../out/Taiga-win32-x64/resources",
     "make": "electron-forge make",
     "release": "electron-forge publish",
-    "lint": "eslint . --ext js,ts",
+    "lint": "eslint . --ext js,ts,tsx --fix",
     "test": "jest"
+  },
+  "lint-staged": {
+    "**/*.js": [
+      "eslint --fix"
+    ],
+    "**/*.ts": [
+      "eslint --fix"
+    ],
+    "**/*.tsx": [
+      "eslint --fix"
+    ]
   },
   "keywords": [],
   "license": "MIT",
@@ -31,6 +43,8 @@
     "@babel/preset-env": "7.14.5",
     "@babel/preset-react": "7.14.5",
     "@babel/preset-typescript": "7.14.5",
+    "@commitlint/cli": "^16.1.0",
+    "@commitlint/config-conventional": "^16.0.0",
     "@electron-forge/cli": "6.0.0-beta.57",
     "@electron-forge/maker-deb": "6.0.0-beta.57",
     "@electron-forge/maker-rpm": "6.0.0-beta.57",
@@ -61,7 +75,9 @@
     "eslint-plugin-react": "7.24.0",
     "eslint-plugin-standard": "5.0.0",
     "file-loader": "^6.2.0",
+    "husky": "^7.0.4",
     "jest": "27.0.4",
+    "lint-staged": "^12.3.2",
     "npm-run-all": "4.1.5",
     "prettier": "2.3.1",
     "ts-jest": "27.0.3",
