--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,7 @@
   ],
   "rules": {
     "react/prop-types": "off",
-    "prettier/prettier": ["error"]
+    "prettier/prettier": ["error"],
+    "@typescript-eslint/ban-ts-comment": "off"
   }
 }
