--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "react-hot-loader": "4.13.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
+    "socket.io": "^4.4.1",
+    "socket.io-client": "^4.4.1",
     "styled-components": "5.3.0",
     "uuid": "^8.3.2"
   },
