--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "make": "electron-forge make",
     "release": "electron-forge publish",
     "lint": "eslint . --ext js,ts,tsx --fix",
-    "test": "jest"
+    "test": "jest --ci --reporters=jest-junit --reporters=default"
   },
   "lint-staged": {
     "**/*.js": [
@@ -82,6 +82,7 @@
     "file-loader": "^6.2.0",
     "husky": "^7.0.4",
     "jest": "27.0.4",
+    "jest-junit": "^13.2.0",
     "lint-staged": "^12.3.2",
     "npm-run-all": "4.1.5",
     "prettier": "2.3.1",
