fix: remove --ci flag from jest script

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "make": "electron-forge make",
     "release": "electron-forge publish",
     "lint": "eslint . --ext js,ts,tsx --fix",
-    "test": "jest --ci --reporters=jest-junit --reporters=default"
+    "test": "jest --reporters=jest-junit --reporters=default"
   },
   "lint-staged": {
     "**/*.js": [
