Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -55,6 +55,7 @@ jobs:
         customCommand: 'run lint'
 
     - task: Npm@1
+      continueOnError: true
       inputs:
         command: 'custom'
         workingDir: '.'
