--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "license": "MIT",
   "dependencies": {
     "copyfiles": "^2.4.1",
+    "dotenv": "^16.0.0",
     "electron-log": "^4.4.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -67,7 +68,6 @@
     "@typescript-eslint/parser": "4.27.0",
     "babel-loader": "8.2.2",
     "commitizen": "^4.2.4",
-    "cross-env": "7.0.3",
     "cz-conventional-changelog": "3.3.0",
     "electron": "13.1.2",
     "eslint": "7.29.0",
