--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -94,6 +94,12 @@ jobs:
         command: 'custom'
         workingDir: '.'
         customCommand: 'run package:ci'
+      
+    - task: DotNetCoreCLI@2
+      inputs:
+        command: 'restore'
+        projects: '**/*.csproj'
+        feedsToUse: 'select'
 
     - task: DotNetCoreCLI@2
       inputs:
