Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,8 +37,7 @@ trigger: none
 jobs:
 - job: build
   displayName: Build Package
-  pool: 
-    vmImage: windows-latest
+  pool: MyPC
   steps:
     # - task: SonarCloudPrepare@1
     #   inputs:
