--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,55 +39,55 @@ jobs:
   displayName: Build Package
   pool: MyPC
   steps:
-    # - task: SonarCloudPrepare@1
-    #   inputs:
-    #     SonarCloud: 'SonnarCloud'
-    #     organization: 'iamtheluiz'
-    #     scannerMode: 'CLI'
-    #     configMode: 'manual'
-    #     cliProjectKey: '$(SONAR_PROJECT_KEY)'
-    #     cliProjectName: '$(SONAR_PROJECT_NAME)'
-    #     cliSources: '.'
+    - task: SonarCloudPrepare@1
+      inputs:
+        SonarCloud: 'SonnarCloud'
+        organization: 'iamtheluiz'
+        scannerMode: 'CLI'
+        configMode: 'manual'
+        cliProjectKey: '$(SONAR_PROJECT_KEY)'
+        cliProjectName: '$(SONAR_PROJECT_NAME)'
+        cliSources: '.'
     
-    # - task: UseDotNet@2
-    #   inputs:
-    #     packageType: 'sdk'
-    #     version: '6.x'
+    - task: UseDotNet@2
+      inputs:
+        packageType: 'sdk'
+        version: '6.x'
     
-    # - task: NodeTool@0
-    #   inputs:
-    #     versionSpec: '16.x'
+    - task: NodeTool@0
+      inputs:
+        versionSpec: '16.x'
     
-    # - task: Npm@1
-    #   inputs:
-    #     command: 'install'
-    #     workingDir: '.'
+    - task: Npm@1
+      inputs:
+        command: 'install'
+        workingDir: '.'
 
-    # - task: Npm@1
-    #   inputs:
-    #     command: 'custom'
-    #     workingDir: '.'
-    #     customCommand: 'run lint'
+    - task: Npm@1
+      inputs:
+        command: 'custom'
+        workingDir: '.'
+        customCommand: 'run lint'
 
-    # - task: Npm@1
-    #   continueOnError: true
-    #   inputs:
-    #     command: 'custom'
-    #     workingDir: '.'
-    #     customCommand: 'run test'
+    - task: Npm@1
+      continueOnError: true
+      inputs:
+        command: 'custom'
+        workingDir: '.'
+        customCommand: 'run test'
 
-    # - task: PublishTestResults@2
-    #   inputs:
-    #     testResultsFormat: 'JUnit'
-    #     testResultsFiles: 'junit.xml'
-    #     mergeTestResults: true
-    #     failTaskOnFailedTests: true
+    - task: PublishTestResults@2
+      inputs:
+        testResultsFormat: 'JUnit'
+        testResultsFiles: 'junit.xml'
+        mergeTestResults: true
+        failTaskOnFailedTests: true
     
-    # - task: Npm@1
-    #   inputs:
-    #     command: 'custom'
-    #     workingDir: '.'
-    #     customCommand: 'run package:ci'
+    - task: Npm@1
+      inputs:
+        command: 'custom'
+        workingDir: '.'
+        customCommand: 'run package:ci'
       
     - task: DotNetCoreCLI@2
       inputs:
@@ -103,25 +103,25 @@ jobs:
         arguments: '-c Release -o $(DOTNET_PUBLISH_OUTDIR)'
         workingDirectory: './TaigaRecognition'
 
-    # - task: SonarCloudAnalyze@1
+    - task: SonarCloudAnalyze@1
 
-    # - task: SonarCloudPublish@1
-    #   inputs:
-    #     pollingTimeoutSec: '300'
+    - task: SonarCloudPublish@1
+      inputs:
+        pollingTimeoutSec: '300'
 
-    # - task: sonarcloud-buildbreaker@2
-    #   inputs:
-    #     SonarCloud: 'SonnarCloud'
-    #     organization: 'iamtheluiz'
+    - task: sonarcloud-buildbreaker@2
+      inputs:
+        SonarCloud: 'SonnarCloud'
+        organization: 'iamtheluiz'
     
-    # - task: CopyFiles@2
-    #   inputs:
-    #     SourceFolder: './out'
-    #     Contents: '**'
-    #     TargetFolder: '$(Build.ArtifactStagingDirectory)'
+    - task: CopyFiles@2
+      inputs:
+        SourceFolder: './out'
+        Contents: '**'
+        TargetFolder: '$(Build.ArtifactStagingDirectory)'
 
-    # - task: PublishBuildArtifacts@1
-    #   inputs:
-    #     PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-    #     ArtifactName: 'drop'
-    #     publishLocation: 'Container'
+    - task: PublishBuildArtifacts@1
+      inputs:
+        PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+        ArtifactName: 'drop'
+        publishLocation: 'Container'
