Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -101,6 +101,7 @@ jobs:
         publishWebProjects: false
         projects: '**/*.csproj'
         arguments: '-c Release -o $(DOTNET_PUBLISH_OUTDIR)'
+        zipAfterPublish: false
         workingDirectory: './TaigaRecognition'
 
     - task: SonarCloudAnalyze@1
