--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,6 +31,10 @@ variables:
   value: Taiga
 - name: DOTNET_PUBLISH_OUTDIR
   value: ../out/Taiga-win32-x64/resources
+- name: RELEASE_GREETING_MESSAGE
+  value: $(RELEASE_GREETING_MESSAGE)
+- name: TAIGA_DEFAULT_IMAGE
+  value: $(TAIGA_DEFAULT_IMAGE)
 
 trigger: none
 
@@ -105,6 +109,7 @@ jobs:
         projects: '**/*.csproj'
         arguments: '-c Release -o $(DOTNET_PUBLISH_OUTDIR)'
         zipAfterPublish: false
+        modifyOutputPath: false
         workingDirectory: './TaigaRecognition'
 
     - task: SonarCloudAnalyze@1
