--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -87,14 +87,13 @@ jobs:
         mergeTestResults: true
         failTaskOnFailedTests: true
     
-    - task: Npm@1
+    - task: PowerShell@2
       inputs:
-        command: 'custom'
-        workingDir: '.'
-        customCommand: 'run package:ci'
-      env:
-        RELEASE_GREETING_MESSAGE: $(RELEASE_GREETING_MESSAGE)
-        TAIGA_DEFAULT_IMAGE: $(TAIGA_DEFAULT_IMAGE)
+        targetType: 'inline'
+        script: |
+          $env:RELEASE_GREETING_MESSAGE="$(RELEASE_GREETING_MESSAGE)"
+          $env:TAIGA_DEFAULT_IMAGE="$(TAIGA_DEFAULT_IMAGE)"
+          npm run package:ci
       
     - task: DotNetCoreCLI@2
       inputs:
