--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,10 +4,10 @@
 # https://aka.ms/yaml
 
 parameters:
-- name: RELEASE_GREETING_MESSAGE
+- name: SELECTED_RELEASE_GREETING_MESSAGE
   displayName: Escreva uma mensagem de boas vindas
   type: string
-- name: TAIGA_DEFAULT_IMAGE
+- name: SELECTED_TAIGA_DEFAULT_IMAGE
   displayName: Escolha a imagem padrão da aplicação
   type: string
   values:
@@ -31,6 +31,10 @@ variables:
   value: Taiga
 - name: DOTNET_PUBLISH_OUTDIR
   value: ../out/Taiga-win32-x64/resources
+- name: RELEASE_GREETING_MESSAGE
+  value: $(SELECTED_RELEASE_GREETING_MESSAGE)
+- name: TAIGA_DEFAULT_IMAGE
+  value: $(SELECTED_TAIGA_DEFAULT_IMAGE)
 
 trigger: none
 
@@ -39,57 +43,66 @@ jobs:
   displayName: Build Package
   pool: MyPC
   steps:
-    - task: SonarCloudPrepare@1
-      inputs:
-        SonarCloud: 'SonnarCloud'
-        organization: 'iamtheluiz'
-        scannerMode: 'CLI'
-        configMode: 'manual'
-        cliProjectKey: '$(SONAR_PROJECT_KEY)'
-        cliProjectName: '$(SONAR_PROJECT_NAME)'
-        cliSources: '.'
+    # - task: SonarCloudPrepare@1
+    #   inputs:
+    #     SonarCloud: 'SonnarCloud'
+    #     organization: 'iamtheluiz'
+    #     scannerMode: 'CLI'
+    #     configMode: 'manual'
+    #     cliProjectKey: '$(SONAR_PROJECT_KEY)'
+    #     cliProjectName: '$(SONAR_PROJECT_NAME)'
+    #     cliSources: '.'
     
-    - task: UseDotNet@2
-      inputs:
-        packageType: 'sdk'
-        version: '6.x'
+    # - task: UseDotNet@2
+    #   inputs:
+    #     packageType: 'sdk'
+    #     version: '6.x'
     
-    - task: NodeTool@0
-      inputs:
-        versionSpec: '16.x'
+    # - task: NodeTool@0
+    #   inputs:
+    #     versionSpec: '16.x'
     
-    - task: Npm@1
-      inputs:
-        command: 'install'
-        workingDir: '.'
+    # - task: Npm@1
+    #   inputs:
+    #     command: 'install'
+    #     workingDir: '.'
 
-    - task: Npm@1
-      inputs:
-        command: 'custom'
-        workingDir: '.'
-        customCommand: 'run lint'
+    # - task: Npm@1
+    #   inputs:
+    #     command: 'custom'
+    #     workingDir: '.'
+    #     customCommand: 'run lint'
 
-    - task: Npm@1
-      continueOnError: true
-      inputs:
-        command: 'custom'
-        workingDir: '.'
-        customCommand: 'run test'
+    # - task: Npm@1
+    #   continueOnError: true
+    #   inputs:
+    #     command: 'custom'
+    #     workingDir: '.'
+    #     customCommand: 'run test'
 
-    - task: PublishTestResults@2
-      inputs:
-        testResultsFormat: 'JUnit'
-        testResultsFiles: 'junit.xml'
-        mergeTestResults: true
-        failTaskOnFailedTests: true
+    # - task: PublishTestResults@2
+    #   inputs:
+    #     testResultsFormat: 'JUnit'
+    #     testResultsFiles: 'junit.xml'
+    #     mergeTestResults: true
+    #     failTaskOnFailedTests: true
     
+    # - task: PowerShell@2
+    #   inputs:
+    #     targetType: 'inline'
+    #     script: |
+    #       $env:RELEASE_GREETING_MESSAGE="$(RELEASE_GREETING_MESSAGE)"
+    #       $env:TAIGA_DEFAULT_IMAGE="$(TAIGA_DEFAULT_IMAGE)"
+    #       npm run package:ci
+
     - task: PowerShell@2
       inputs:
         targetType: 'inline'
         script: |
           $env:RELEASE_GREETING_MESSAGE="$(RELEASE_GREETING_MESSAGE)"
           $env:TAIGA_DEFAULT_IMAGE="$(TAIGA_DEFAULT_IMAGE)"
-          npm run package:ci
+          Write-Host RELEASE_GREETING_MESSAGE
+          Write-Host TAIGA_DEFAULT_IMAGE
       
     - task: DotNetCoreCLI@2
       inputs:
