--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -99,10 +99,11 @@ jobs:
       inputs:
         targetType: 'inline'
         script: |
-          $env:RELEASE_GREETING_MESSAGE="$RELEASE_GREETING_MESSAGE"
-          $env:TAIGA_DEFAULT_IMAGE="$TAIGA_DEFAULT_IMAGE"
-          Write-Host RELEASE_GREETING_MESSAGE
-          Write-Host TAIGA_DEFAULT_IMAGE
+          Write-Host $env:RELEASE_GREETING_MESSAGE
+          Write-Host $env:TAIGA_DEFAULT_IMAGE
+      env:
+        RELEASE_GREETING_MESSAGE: $(RELEASE_GREETING_MESSAGE)
+        TAIGA_DEFAULT_IMAGE: $(TAIGA_DEFAULT_IMAGE)
       
     - task: DotNetCoreCLI@2
       inputs:
