--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,57 +39,57 @@ jobs:
   displayName: Build Package
   pool: MyPC
   steps:
-    # - task: SonarCloudPrepare@1
-    #   inputs:
-    #     SonarCloud: 'SonnarCloud'
-    #     organization: 'iamtheluiz'
-    #     scannerMode: 'CLI'
-    #     configMode: 'manual'
-    #     cliProjectKey: '$(SONAR_PROJECT_KEY)'
-    #     cliProjectName: '$(SONAR_PROJECT_NAME)'
-    #     cliSources: '.'
+    - task: SonarCloudPrepare@1
+      inputs:
+        SonarCloud: 'SonnarCloud'
+        organization: 'iamtheluiz'
+        scannerMode: 'CLI'
+        configMode: 'manual'
+        cliProjectKey: '$(SONAR_PROJECT_KEY)'
+        cliProjectName: '$(SONAR_PROJECT_NAME)'
+        cliSources: '.'
     
-    # - task: UseDotNet@2
-    #   inputs:
-    #     packageType: 'sdk'
-    #     version: '6.x'
+    - task: UseDotNet@2
+      inputs:
+        packageType: 'sdk'
+        version: '6.x'
     
-    # - task: NodeTool@0
-    #   inputs:
-    #     versionSpec: '16.x'
+    - task: NodeTool@0
+      inputs:
+        versionSpec: '16.x'
     
-    # - task: Npm@1
-    #   inputs:
-    #     command: 'install'
-    #     workingDir: '.'
+    - task: Npm@1
+      inputs:
+        command: 'install'
+        workingDir: '.'
 
-    # - task: Npm@1
-    #   inputs:
-    #     command: 'custom'
-    #     workingDir: '.'
-    #     customCommand: 'run lint'
+    - task: Npm@1
+      inputs:
+        command: 'custom'
+        workingDir: '.'
+        customCommand: 'run lint'
 
-    # - task: Npm@1
-    #   continueOnError: true
-    #   inputs:
-    #     command: 'custom'
-    #     workingDir: '.'
-    #     customCommand: 'run test'
+    - task: Npm@1
+      continueOnError: true
+      inputs:
+        command: 'custom'
+        workingDir: '.'
+        customCommand: 'run test'
 
-    # - task: PublishTestResults@2
-    #   inputs:
-    #     testResultsFormat: 'JUnit'
-    #     testResultsFiles: 'junit.xml'
-    #     mergeTestResults: true
-    #     failTaskOnFailedTests: true
+    - task: PublishTestResults@2
+      inputs:
+        testResultsFormat: 'JUnit'
+        testResultsFiles: 'junit.xml'
+        mergeTestResults: true
+        failTaskOnFailedTests: true
     
-    # - task: PowerShell@2
-    #   inputs:
-    #     targetType: 'inline'
-    #     script: |
-    #       $env:RELEASE_GREETING_MESSAGE="$(RELEASE_GREETING_MESSAGE)"
-    #       $env:TAIGA_DEFAULT_IMAGE="$(TAIGA_DEFAULT_IMAGE)"
-    #       npm run package:ci
+    - task: PowerShell@2
+      inputs:
+        targetType: 'inline'
+        script: |
+          $env:RELEASE_GREETING_MESSAGE="$(RELEASE_GREETING_MESSAGE)"
+          $env:TAIGA_DEFAULT_IMAGE="$(TAIGA_DEFAULT_IMAGE)"
+          npm run package:ci
 
     - task: PowerShell@2
       inputs:
