--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,6 +40,7 @@ jobs:
   pool: MyPC
   steps:
     - task: SonarCloudPrepare@1
+      displayName: Prepare Sonar Analysis
       inputs:
         SonarCloud: 'SonnarCloud'
         organization: 'iamtheluiz'
@@ -50,26 +51,31 @@ jobs:
         cliSources: '.'
     
     - task: UseDotNet@2
+      displayName: Use DotNet 6.x
       inputs:
         packageType: 'sdk'
         version: '6.x'
     
     - task: NodeTool@0
+      displayName: Use Node 16.x
       inputs:
         versionSpec: '16.x'
     
     - task: Npm@1
+      displayName: Install Node Dependencies
       inputs:
         command: 'install'
         workingDir: '.'
 
     - task: Npm@1
+      displayName: Code Lint
       inputs:
         command: 'custom'
         workingDir: '.'
         customCommand: 'run lint'
 
     - task: Npm@1
+      displayName: Code Test
       continueOnError: true
       inputs:
         command: 'custom'
@@ -77,6 +83,7 @@ jobs:
         customCommand: 'run test'
 
     - task: PublishTestResults@2
+      displayName: Publish Test Result
       inputs:
         testResultsFormat: 'JUnit'
         testResultsFiles: 'junit.xml'
@@ -84,30 +91,24 @@ jobs:
         failTaskOnFailedTests: true
     
     - task: PowerShell@2
+      displayName: Create Package
       inputs:
         targetType: 'inline'
         script: |
-          $env:RELEASE_GREETING_MESSAGE="$(RELEASE_GREETING_MESSAGE)"
-          $env:TAIGA_DEFAULT_IMAGE="$(TAIGA_DEFAULT_IMAGE)"
           npm run package:ci
-
-    - task: PowerShell@2
-      inputs:
-        targetType: 'inline'
-        script: |
-          Write-Host $env:RELEASE_GREETING_MESSAGE
-          Write-Host $env:TAIGA_DEFAULT_IMAGE
       env:
         RELEASE_GREETING_MESSAGE: ${{ parameters.RELEASE_GREETING_MESSAGE }}
         TAIGA_DEFAULT_IMAGE: ${{ parameters.TAIGA_DEFAULT_IMAGE }}
       
     - task: DotNetCoreCLI@2
+      displayName: Restore DotNet Dependencies
       inputs:
         command: 'restore'
         projects: '**/*.csproj'
         feedsToUse: 'select'
 
     - task: DotNetCoreCLI@2
+      displayName: Publish DotNet Projet
       inputs:
         command: 'publish'
         publishWebProjects: false
@@ -118,23 +119,28 @@ jobs:
         workingDirectory: './TaigaRecognition'
 
     - task: SonarCloudAnalyze@1
+      displayName: Sonar Run Code Analysis
 
     - task: SonarCloudPublish@1
+      displayName: Sonar Publish Quality Gate
       inputs:
         pollingTimeoutSec: '300'
 
     - task: sonarcloud-buildbreaker@2
+      displayName: Sonar Build Breaker
       inputs:
         SonarCloud: 'SonnarCloud'
         organization: 'iamtheluiz'
     
     - task: CopyFiles@2
+      displayName: Copy Files
       inputs:
         SourceFolder: './out'
         Contents: '**'
         TargetFolder: '$(Build.ArtifactStagingDirectory)'
 
     - task: PublishBuildArtifacts@1
+      displayName: Publish Artifact
       inputs:
         PathtoPublish: '$(Build.ArtifactStagingDirectory)'
         ArtifactName: 'drop'
