Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -193,7 +193,7 @@ jobs:
     - task: publishhtmlreport@1
       inputs:
         htmlType: 'genericHTML'
-        htmlPath: '$(Build.ArtifactStagingDirectory)\report\report.html'
+        htmlPath: '$(Build.SourcesDirectory)\report\report.html'
 
     - task: CopyFiles@2
       displayName: Copy Files
