Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -190,6 +190,19 @@ jobs:
         REPORT_SONAR_FILE: '$(Build.ArtifactStagingDirectory)\.sqAnalysis\SonarQubeBuildSummary.md'
         REPORT_OUTPUT: '$(Build.SourcesDirectory)\report'
 
+    - task: SendEmail@1
+      inputs:
+        To: 'lgdsvgamerp@gmail.com'
+        From: '$(EmailUser)'
+        Subject: 'Taiga build #$(Build.BuildNumber)'
+        BodyAsHtml: false
+        AddAttachment: true
+        Attachment: '$(Build.SourcesDirectory)\report\report.pdf'
+        SmtpServer: 'smtp.gmail.com'
+        SmtpPort: '465'
+        SmtpUsername: '$(EmailUser)'
+        SmtpPassword: '$(EmailPassword)'
+
     - task: publishhtmlreport@1
       inputs:
         htmlType: 'genericHTML'
