--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,6 +25,7 @@ parameters:
   - taiga-wait
 
 variables:
+- group: EmailCredentials
 - name: SONAR_PROJECT_KEY
   value: Taiga
 - name: SONAR_PROJECT_NAME
