--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -57,7 +57,9 @@ jobs:
         cliProjectKey: '$(SONAR_PROJECT_KEY)'
         cliProjectName: '$(SONAR_PROJECT_NAME)'
         cliSources: '.'
-    
+        extraProperties: |
+          sonar.typescript.lcov.reportPaths=./coverage/lcov.info
+
     - task: UseDotNet@2
       displayName: Use DotNet 6.x
       inputs:
@@ -97,6 +99,12 @@ jobs:
         testResultsFiles: 'junit.xml'
         mergeTestResults: true
         failTaskOnFailedTests: true
+
+    - task: PublishCodeCoverageResults@1
+      inputs:
+        codeCoverageTool: 'Cobertura'
+        summaryFileLocation: '$(System.DefaultWorkingDirectory)/coverage/clover.xml'
+        reportDirectory: '$(System.DefaultWorkingDirectory)/coverage/lcov-report'
     
     - task: PowerShell@2
       displayName: Create Package
